--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Splity</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
 </head>
 
@@ -37,6 +39,9 @@
   <% if Rails.env.development? %>
   <div class="well well-lg col-lg-8 col-lg-offset-2">
     <%= debug(params) %>
+  </div>
+  <div class="well well-lg col-lg-8 col-lg-offset-2">
+    <pre><code><script type="text/javascript">document.write(JSON.stringify(<%= raw @dashboard.to_json if @dashboard.present? %>, null, 2))</script></code></pre>
   </div>
   <% end %>
 </body>
