--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -26,15 +26,14 @@
       <% end %>
 
       <div class="col-md-4">
-        <a href="#" class="friend-block-container add-friend" style="display: none;">
+        <div href="javascript:void(0)" class="friend-block-container add-friend" style="display: none;">
           <div class="friend-preview pull-left">
-            <img width="80" height="80">
+            <img width="80" height="80" class="img-thumbnail" src="http://placecage.com/c/80/80">
           </div>
           <h4 class="friend-block-friend-name">Press Enter to Add Friend</h4>
           <h5 class="friend-block-friend-email">(Or click on the 'Add' button)</h5>
-          <span class="glyphicon glyphicon-remove friend-block-remove-friend" title="Remove Friend"></span>
           <div style="clear: both"></div>
-        </a>
+        </div>
       </div>
     </div>
   </div>
