--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -55,15 +55,14 @@
           
           <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-              <button type="reset" class="btn btn-default">Cancel</button>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Create Account!</button>
             </div>
           </div>
           
           <div class="form-group">
             <div class="col-lg-2"></div>
             <div class="col-lg-10">
-              <span class="help-block" style="color:#333;">Don't have an account yet? <a href="<%=  %>">Sign Up!</a></span>
+              <span class="help-block" style="color:#333;">Already have an account? <a href="<%= signin_path %>">Sign In!</a></span>
             </div>
           </div>
         </fieldset>
