JS/CSS serving, new css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require_tree .
+ *= require AdminLTE
  *= require chosen
  *= require sb-admin
  *= require bootstrap-switch
