--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,95 @@
 <% if @user.id == current_user.id %>
 
   <div class="row">
+    <div class="col-lg-3 col-xs-6">
+      <!-- small box -->
+      <div class="small-box bg-aqua">
+        <div class="inner">
+          <h3>
+            <%= @dashboard[:total_debt].to_i %>
+          </h3>
+          <p>
+            Total Debt
+          </p>
+        </div>
+        <!-- <div class="icon">
+          <i class="ion ion-bag"></i>
+        </div> -->
+        <a href="#" class="small-box-footer">
+        More info <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-xs-6">
+      <!-- small box -->
+      <div class="small-box bg-green">
+        <div class="inner">
+          <h3>
+            <%= @dashboard[:total_paid] %>
+          </h3>
+          <p>
+            Total Paid
+          </p>
+        </div>
+        <!-- <div class="icon">
+          <i class="ion ion-stats-bars"></i>
+        </div> -->
+        <a href="#" class="small-box-footer">
+        More info <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-xs-6">
+      <!-- small box -->
+      <div class="small-box bg-yellow">
+        <div class="inner">
+          <h3>
+            <%= @dashboard[:total_amount] %>
+          </h3>
+          <p>
+            Total Bills
+          </p>
+        </div>
+        <!-- <div class="icon">
+          <i class="ion ion-person-add"></i>
+        </div> -->
+        <a href="#" class="small-box-footer">
+        More info <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      </div>
+    </div>
+    <!-- ./col -->
+    <div class="col-lg-3 col-xs-6">
+      <!-- small box -->
+      <div class="small-box bg-red">
+        <div class="inner">
+          <h3>
+            <%= @dashboard[:participations].length %>
+          </h3>
+          <p>
+            Total Activities
+          </p>
+        </div>
+        <!-- <div class="icon">
+          <i class="ion ion-pie-graph"></i>
+        </div> -->
+        <a href="#" class="small-box-footer">
+        More info <i class="fa fa-arrow-circle-right"></i>
+        </a>
+      </div>
+    </div>
+    <!-- ./col -->
+  </div>
+
+  <!-- <div class="row">
     <div class="col-lg-3">
       <div class="panel panel-info">
         <div class="panel-heading">
           <div class="row">
             <div class="col-xs-6">
-              <i class="fa fa-comments fa-5x"></i>
+              <i class="fa fa-long-arrow-down fa-5x"></i> <i class="fa fa-usd fa-5x text-danger"></i>
             </div>
             <div class="col-xs-6 text-right">
               <p class="announcement-heading"><%= @dashboard[:total_debt].to_i %></p>
@@ -33,7 +116,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-xs-6">
-              <i class="fa fa-check fa-5x"></i>
+              <i class="fa fa-long-arrow-up fa-5x"></i> <i class="fa fa-usd fa-5x text-success"></i>
             </div>
             <div class="col-xs-6 text-right">
               <p class="announcement-heading"><%= @dashboard[:total_paid] %></p>
@@ -109,7 +192,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <div class="row">
     <div class="col-lg-6" style="height: 250px" id="divAmountDue"></div>
